# sismed_20.1v

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  main.rs
src/components/: Layout.tsx  MedicineManager.tsx  PatientManager.tsx  PosologyManager.tsx  PrescriptionManager.tsx  SettingsManager.tsx
src/lib/: database.ts  pdf.ts
supabase/migrations/: 20250812020248_pink_salad.sql  20250812021151_fierce_voice.sql
