[package]
name = "sismed-perobal"
version = "20.1.0"
description = "Sistema de Prescrição Médica Perobal"
authors = ["SisMed Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all", "dialog-save", "dialog-open", "fs-copy-file", "fs-exists", "fs-read-file", "fs-write-file", "shell-open", "path-all"] }
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]